--- a/account-page.html
+++ b/account-page.html
@@ -22,14 +22,14 @@
       <div class="navbar">
         <!-- navbar starting -->
         <div class="logo">
-         <a href="index.html"> <img src="images/logo.png" width="125px" /></a>
+        <a href="index.html"> <img src="images/logo.png" width="125px" /></a>
         </div>
         <nav>
           <ul id="MenuItems">
             <li><a href="index.html">Home</a></li>
             <li><a href="product.html">Products</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="guide-page.html">Product Guide</a></li>
+            <li><a href="contact-page.html">Contact Us</a></li>
             <li><a href="account-page.html">Account</a></li>
           </ul>
         </nav>
@@ -90,8 +90,8 @@
           <div class="footer-col-2">
             <img src="images/logo.png" alt="" />
             <p>
-              Our Purpose Is To Sustainably Make the Pleasure and Benefits of
-              Sports Accessible to the Many.
+              Our Purpose Is To Sustainably Make the Pleasure and Benefits of 
+              Technology Accessible to the Many.
             </p>
           </div>
           <div class="footer-col-3">
