--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <ul id="MenuItems">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="product.html">Products</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href="guide-page.html">Product Guide</a></li>
+                    <li><a href="contact-page.html">Contact Us</a></li>
                     <li><a href="account-page.html">Account</a></li>
                 </ul>
             </nav>
@@ -329,7 +329,7 @@
                     </div>
                     <div class="footer-col-2">
                         <img src="images/logo.png" alt="">
-                        <p>Our Purpose Is To Sustainably Make the Pleasure and Benefits of Sports Accessible to the Many.</p>
+                        <p>Our Purpose Is To Sustainably Make the Pleasure and Benefits of Technology Accessible to the Many.</p>
                     </div>
                     <div class="footer-col-3">
                         <h3>Useful Links</h3>
