--- a/account-page.html
+++ b/account-page.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width-device-width, initial-scale=1.0" />
-    <title>Cart Products</title>
+    <title>Account Page</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -22,7 +22,7 @@
       <div class="navbar">
         <!-- navbar starting -->
         <div class="logo">
-        <a href="index.html"> <img src="images/logo.png" width="125px" /></a>
+        <a href="index.html"> <img src="images/logo.png" width="175px" /></a>
         </div>
         <nav>
           <ul id="MenuItems">
@@ -88,7 +88,7 @@
             </div>
           </div>
           <div class="footer-col-2">
-            <img src="images/logo.png" alt="" />
+            <img src="images/logo2.jpeg" alt="" />
             <p>
               Our Purpose Is To Sustainably Make the Pleasure and Benefits of 
               Technology Accessible to the Many.
