--- a/contact-page.html
+++ b/contact-page.html
@@ -18,7 +18,7 @@
   <div class="container">
       <div class="navbar">         <!-- navbar starting -->
       <div class="logo">
-          <a href="index.html"><img src="images/logo.png" width="125px"></a>
+          <a href="index.html"><img src="images/logo.png" width="175px"></a>
       </div>
       <nav>
           <ul id="MenuItems">
@@ -65,7 +65,7 @@
                         </div>
                     </div>
                     <div class="footer-col-2">
-                        <img src="images/logo.png" alt="">
+                        <img src="images/logo2.jpeg" alt="">
                         <p>Our Purpose Is To Sustainably Make the Pleasure and Benefits of Technology Accessible to the Many.</p>
                     </div>
                     <div class="footer-col-3">
