--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width-device-width, initial-scale=1.0">
-        <title>PC Builder</title>
+        <title>BuildMaster</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
         <div class="container">
             <div class="navbar">         <!-- navbar starting -->
             <div class="logo">
-                <a href="index.html"><img src="images/logo.png" width="125px"></a>
+                <a href="index.html"><img src="images/logo.png" width="175px"></a>
             </div>
             <nav>
                 <ul id="MenuItems">
@@ -328,7 +328,7 @@
                         </div>
                     </div>
                     <div class="footer-col-2">
-                        <img src="images/logo.png" alt="">
+                        <img src="images/logo2.jpeg" alt="">
                         <p>Our Purpose Is To Sustainably Make the Pleasure and Benefits of Technology Accessible to the Many.</p>
                     </div>
                     <div class="footer-col-3">
