--- a/product-details.html
+++ b/product-details.html
@@ -22,7 +22,7 @@
     <div class="navbar">
         <!-- navbar starting -->
         <div class="logo">
-        <a href="index.html"><img src="images/logo.png" width="125px" /></a>
+        <a href="index.html"><img src="images/logo.png" width="175px" /></a>
         </div>
         <nav>
         <ul id="MenuItems">
@@ -163,7 +163,7 @@ Excellent Thermal Performance : Optimized airflow due to the large intakes on th
             </div>
           </div>
           <div class="footer-col-2">
-            <img src="images/logo.png" alt="" />
+            <img src="images/logo2.jpeg" alt="" />
             <p>
               Our Purpose Is To Sustainably Make the Pleasure and Benefits of
               Technology Accessible to the Many.
